# cairn

./: .gitignore  MCP_SERVER_MIGRATION_IMPLEMENTATION_GUIDE.md  README.md  SECURITY_GUIDE.md  main.py  test_cairn.py  test_client.py
API_explorer/: add_apis.py
cairn/: __init__.py  database.py  http_server.py  models.py  server.py
docs/: AGENT_OPERATIONS_GUIDE.md  ARCHITECTURE.md  QUICK_REFERENCE.md
gmail/: env.example
google_calendar/: env.example
mcp_packet_server/: DEEPPCB_SERVICE_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  MODULAR_ARCHITECTURE_REFACTOR.md  PROOF_OF_CONCEPT_SUMMARY.md  README.md  REAL_API_SETUP.md  __init__.py  bootstrap.py  cursor_mcp_config.json  debug_calendar.py  demo.py  dynamic_tool_manager.py  enhanced_server.py  env.example  mcp_server.py  packet.py  pyproject.toml  requirements.txt  run_demo.py  server.py  service_handlers.py  start_mcp_server.sh  test_basic.py  test_deeppcb.py  test_enhanced_validation.py  test_gmail_integration.py  test_live_services.py  test_real_integration.py  test_todoist_integration.py  validation_tripwires.py
mcp_packet_server/logs/: deep_pcb_1756074358.json  deep_pcb_1756075208.json  deep_pcb_1756076590.json  gcal_1756074358.json  gcal_1756075208.json  gcal_1756076590.json  gmail_1756074358.json  gmail_1756075208.json  gmail_1756076590.json  todoist_1756074358.json  todoist_1756075208.json  todoist_1756076590.json
mcp_packet_server/services/: __init__.py  base_handler.py  deep_pcb_handler.py  gmail_handler.py  google_calendar_handler.py  todoist_handler.py
pcb_designer/: README.md
(+6 files in other folders)
